[metadata]
description-file = README.md
author = Chapman Siu
author-email = chpmn.siu@gmail.com
home-page = http://github.com/chappers/lazydoc
name = lazydoc
version = 1.0.0
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Documentation
    Topic :: Documentation :: Sphinx
    Topic :: Text Processing
    Topic :: Utilities
    Framework :: Sphinx
[entry_points]
console_scripts = lazydoc=lazydoc.cli:main
[files]
packages = lazydoc
